<resources>
    <string name="app_name">Wiki for Among Us</string>
    <string name="jump">
        Above is the general layout of The Skeld’s map.\n(Pinch with two fingers to zoom)\n\n
        At the beginning of the game and after each discussion, players will start in the cafeteria.\n
        From here they can branch out to any of the thirteen additional rooms to complete their tasks.\n
        Every corridor features doorways that the imposters can lock, making it impossible for crewmate to pass through until an invisible timer expires.\n
        One of the most important rooms on the map is the Admin room, as this contains a map players can interact with to see where everyone is.\n
        This includes when imposters use vents to jump between locations, making it a handy sleuthing tool for the savvy player.\n

        Additionally, there are fourteen vents that the imposters can use. All of the vents aren’t connected, so knowing where they go will be important if you want to escape suspicion after a clean kill.\n
        Below is a map of The Skeld with the vent locations marked in red and which vents are connected in green.\n
        I strongly recommend either memorizing or having this map present when you are playing. The last thing you want is to kill someone and pop out in a vent where people are! Always, always, always make sure no one is around you when exiting a vent.
    </string>
    <string name="dive">
        Unlike The Skeld, MIRA HQ is a much smaller and more intimate map. This makes it the most difficult of the three Among Us maps to win as an imposter in a big group.\n\n
        When the round starts, players will either spawn at the Launchpad or in the Cafeteria. \n
        There are only a few hallways, meaning you won’t have as much space to run around as you normally would.\n
        Additionally, the Communications room acts as MIRA HQ’s Admin room, allowing players to view a log that constantly updates with each players location.\n
        While this might appear to be a downgrade of The Skeld’s admin room, it’s actually perfect for tracking an individual person you might be suspicious of.\n

        As for vents, MIRA HQ is rather unique since the entire network is connected.\n
        There are a total of eleven vents on this map and you can use them to reach anywhere on the map.\n
        This makes it much easier to get away, just be careful as you can easily become spotted emerging from one of these holes.\n
        Finally, the last big twist is the Decontamination hallway near the middle of the map. \n
        Entering this will lock both doors for a brief period, trapping anyone inside until the doors open.\n
        Use this to your advantage to split up teams or trap an unaware target!\n
        You can see all the MIRA HQ vents below marked in red along with the routes they’re connected to in green.



    </string>
    <string name="grab">
        The biggest of the three maps in Among Us, Polus allows players to explore both inside and outside an arctic base.\n\n
        This means there’s a lot of ground to cover between rooms, which can be dangerous if you’re a crewmate trying to complete your tasks.\n
        Polus features 15 rooms, not counting any of the decontamination chambers that are required to go through if you want to enter a structure.\n
        Similar to MIRA HQ, these decontamination rooms will seal someone in for a few seconds, denying them access until the doors open.\n

        Additionally, there are twelve vents (which are holes in the ground) on Polus. \n
        These vents aren’t all interconnected, so you’ll need to plan carefully if you’re an imposter. \n
        There are also no vent locations in both the bottom right and bottom left portions of the map. \n
        You can see every vent on the map marked in red along with where they can spit you out in green.\n
        I recommend keeping this map up if you’re new to ensure you don’t make a costly error.\n
    </string>
    <string name="soustitle">Wiki</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps">Maps</string>
    <string name="groups">Groups</string>
    <string name="colors">Colors</string>
    <string name="locations">Locations</string>
    <string name="abilities">Abilities</string>
    <string name="tasks">Tasks</string>
    <string name="the_skeld">The Skeld</string>
    <string name="mira_hq">MIRA HQ</string>
    <string name="watch_video">Watch Video</string>
    <string name="polus">Polus</string>
    <string name="crewmate">Crewmate</string>
    <string name="crewmatedesc">
        The Crewmate is one of two possible roles in the game Among Us.\n
        The primary goal of the Crewmate is to complete all tasks while not being killed by the Impostor, with the secondary goal being Finding the Impostor, and kicking them off the ship.\n\n

        The Crewmate can do a variety of tasks, ranging from fixing color-coded wiring, uploading data to the admin, fueling the ship engines, and memorizing pattern in order to start the space ship reactor.\n
        There are many more tasks that are not listed. Tasks can be set by the game host to either Common, Long, or Short tasks.\n\n

        The primary goal of the Crewmate is to complete all tasks while not being killed by the Impostor, with the secondary goal being finding the Impostor, and kicking them off the ship.\n
        Crewmates who have been killed by an impostor become a ghost.\n
        The Crewmate can do a variety of tasks, ranging from fixing color-coded wiring, uploading data to the admin, fueling the ship engines, and memorizing pattern in order to start the space ship reactor.\n
        There are many more tasks that are not listed.\n Tasks can be set by the game host to either Common, Long, or Short tasks.\n

    </string>
    <string name="impostordesc">
        The Impostor is one of two possible roles in the game Among Us.\n\n
        The primary goal of the Impostor is to kill enough Crewmates to have an equal amount of impostor(s) and crewmates before all tasks are completed, and to have their true identity remain hidden.\n

        The Impostor cannot complete any tasks, however, they are given a task list as general guidance on how to sustain the appearance of a Crewmate. \n
        Impostors have the ability to Sabotage, which can create various temporary problems for Crewmates.\n

        Depending on game settings, there can be up to 3 Impostors in a game.\n
        The chance of a player being an Impostor is 100 divided by the number of players, for example: in a lobby of 2, each player has a 50% chance of being an Impostor, whereas on a lobby of 4, each player has a 25% chance, and in a lobby of 10, each player has a 10% chance, etc.\n
        This chance does not change regardless of how many times you have (or haven\'t) been an Impostor. It is constant.
    </string>
    <string name="admin">
        On Polus, it has no task to be made on the Admin Room.\n
        When someone in the Admin Room (The Skeld, Mira HQ), clicking the button next to the map will show what room everyone is in, but without their colors.\n
        The map doesn\'t show exact positions, and updates when someone changes rooms.
    </string>
    <string name="cafeteria">
        The Skeld :\n\n
        The Cafeteria, in The Skeld, is the main respawn of the players after the Discussion Time, and is a huge corridor with blue circular tables, and has three doors that connects for each place: left,which follows to the corridor near Medbay, right, which follows to the Weapons, and the bottom, which follows to the Storage and Admin (in right).
        A vent is located near the right door, and the Emergency Button is located in the middle tabble of the corriidor.\n\n
        Mira HQ :\n\n
        In Mira HQ, the Cafeteria is located in the right corridor, and is little that its predecessor.\
        It is also near the Storage and the Balcony, and the tables are cubic instead of circular and are light brown.\n
        A vent is located near to the entering of it and the emergency button is located in the left table.

    </string>
    <string name="security">
        Security is a ability in Among Us, which can be used by anyone to get information about other players.\n
        This skill is used to view areas captured by security cameras, and is one of the main ways to catch an imposter by killing or entering the vent.\n\n
        On The Skeld map, when this skill is used, you will see a TV divided into four screens:\n\n
            \t-One between the cafeteria, the admin and the storage.\n
            \t-One in the left corridor of the Cafeteria near the Medbay.\n
            \t-One in the corridor near Navigation, 02, Weapons and Shields.\n
            \t-One between the Security entrance and the Reactor.\n
    </string>
    <string name="exterior">
        The exterior is the outer area of the planetary base, being located practically from the right exit of the office, with a lava pit, several pilasters of climatic modules, among other things.\n
        Lava is the new way for the imposter to be kicked out of the place and thrown into the lava pit.
    </string>
    <string name="storage">
        The Skeld :\n\n
        On The Skeld map, Storage is a room full of boxes, with one floating due to gravity, and has a gas coffin to fill the ship\'s engines.\n It also has a lever and a door where the garbage is emptied. \n\n

        Mira HQ :\n\n
          At Mira HQ, Storage is located near the Cafeteria, where it is a place with a bookcase full of old things, including the watering can, which is used to water the plants.\n\n

        Polus :\n\n
        At Polus, Storage is a small, completely isolated room with just a gallon of gas and a few boxes, along with a hole, which is connected to the holes in the Office and the hole near Communications.

    </string>
    <string name="admina">
    When in the Admin Room, clicking the button next to the map will show what room everyone is in, but without their colors.\n
    The map doesn\'t show exact positions, and updates when someone changes rooms.
    </string>
    <string name="sabotagea">
        An Impostor has the ability to Sabotage, which creates a temporary problem that Crewmates must either wait out, ignore, or fix.\n
        The button will open up a map where different types of sabotage can be chosen.\n
        Any type of sabotage will prevent the Emergency Button from being pressed.\n
        Only one type of sabotage can be done at a time.
    </string>
    <string name="killa">
        This ability is used only by impostors to kill any crew members who are alone with them.\n
        The kill cooldown varies from 0 to 60 seconds and the kill distance can be short, medium or long, depending on the settings of a server. \n
        However, when an impostor is in vent, or he is checking the cameras, sensors or the vitality machine, the kill stops recharging.
    </string>
    <string name="vent">
      This ability lets the impostor hide from crewmates and move around the map without being seen.\n
        When close enough to a vent, the Sabotage button will be replaced with the vent button. \n
        If you click it, an animation shows you jumping into the vent, which everyone can see.\n
        Arrows appear which let you move to connected vents.\n
        Hiding in the vent stops your kill cooldown and sabotage cooldown until you exit the vent.
    </string>
</resources>