<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/banner_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />



            <Button
                android:id="@+id/butt_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFF"
                android:padding="3dp"
                android:textSize="16sp"
                android:fontFamily="@font/lemon"
                android:text="@string/crewmate"
                android:background="@drawable/buttonstyle"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="50dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/card1"
                >

                <com.zolad.zoominimageview.ZoomInImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/crewmate"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:id="@+id/jump"
                android:text="@string/crewmatedesc"
                android:padding="6dp"
                android:lineSpacingExtra="6dp"
                android:fontFamily="@font/details"
                android:textColor="#000"
                android:background="@drawable/textstyle"
                />



            <Button
                android:id="@+id/butt_two"
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:fontFamily="@font/lemon"
                android:text="Impostor"
                android:background="@drawable/buttonstyle"
                android:layout_marginBottom="10dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="50dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="5dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/card2"
                >

                <com.zolad.zoominimageview.ZoomInImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/impostor"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:id="@+id/dive"
                android:text="@string/impostordesc"
                android:visibility="gone"
                android:padding="6dp"
                android:lineSpacingExtra="6dp"
                android:fontFamily="@font/details"
                android:textColor="#000"
                android:background="@drawable/textstyle"
                />






        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>